--- a/package.json
+++ b/package.json
@@ -2,30 +2,30 @@
   "name": "mkdeb-docs",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.4",
-    "@fortawesome/fontawesome-free-brands": "^5.0.8",
-    "@fortawesome/fontawesome-free-regular": "^5.0.8",
-    "@fortawesome/fontawesome-free-solid": "^5.0.8",
-    "typeface-open-sans": "^0.0.54",
-    "typeface-source-code-pro": "^0.0.54"
+    "@fortawesome/fontawesome": "1.1.7",
+    "@fortawesome/fontawesome-free-brands": "5.0.12",
+    "@fortawesome/fontawesome-free-regular": "5.0.12",
+    "@fortawesome/fontawesome-free-solid": "5.0.12",
+    "typeface-open-sans": "0.0.54",
+    "typeface-source-code-pro": "0.0.54"
   },
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
-    "babel-eslint": "^8.2.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.0",
-    "eslint-plugin-html": "^4.0.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.2",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12"
+    "autoprefixer": "8.4.1",
+    "babel-eslint": "8.2.3",
+    "clean-webpack-plugin": "0.1.19",
+    "css-loader": "0.28.11",
+    "eslint": "4.19.1",
+    "eslint-plugin-html": "4.0.3",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "1.1.11",
+    "html-loader": "0.5.5",
+    "node-sass": "4.9.0",
+    "postcss-loader": "2.1.2",
+    "raw-loader": "0.5.1",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21.0",
+    "webpack": "4.8.1",
+    "webpack-cli": "2.1.3"
   },
   "scripts": {
     "build": "webpack",
